# eNNclave

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Makefile  README.md  amazon_clean_data.sh  amazon_convert_dataset.py  amazon_eval.py  amazon_prepare_data.py  amazon_reduce_cds.py  amazon_reduce_data.py  amazon_retrain.py  amazon_train.py  batch_time.sh  build_enclave.py  build_enclave_files.py  clean_project.sh  compile_commands.json  dataset_urls.txt  datasets.py  docker-compose.yml  docker.bashrc  enclave_layer.py  enclave_model.py  environment.yml  evaluate_model.py  extract_dataset.py  extract_vgg_images.py  extract_vgg_labels.py  flowers.py  flowers_train.py  format_strings.py  gen_headers.py  generate-all-graphs.sh  generation_test1.py  generation_test2.py  hist_mit_tuning_nonfrozen.csv  hist_mnist.csv  imdb_compare_outputs.py  (+65 more)
.devcontainer/: Dockerfile  devcontainer.json
App/: App.cpp
Enclave/: Enclave.cpp  Enclave.edl  Enclave.h
backend/cxx/inc/: CxxParameterLoader.h
backend/cxx/src/: CxxParameterLoader.cpp
backend/native/: Makefile  output.c  parameters.c
backend/native/dummy_files/: native_forward.cpp
backend/native/inc/: nativeParameterLoader.h
backend/native/src/: nativeParameterLoader.cpp  output.cpp
backend/native/tests/: add.c  assert.c  conv2.c  depthwise_conv2.c  generate_correct_results.py  generate_tests.py  global_average_pooling1.c  global_average_pooling2.c  max_pool1.c  max_pool2.c  multiply.c  relu.c  sep_conv1.c  test_core.c  tests.h  util.c  zero_pad2.c
backend/sgx/dummy_files/: sgx_config.xml  sgx_forward.cpp
backend/sgx/inc/: encryption.h
backend/sgx/trusted/: debug_signing_key.pem  enclave.edl  output.c  parameters.c
backend/sgx/untrusted/: app.c  wrapper.c  wrapper.h
backend/sgx/untrusted_old/: app.h  print_error.c  print_error.h
core/: nn.c  nn.cpp  nxx.cpp
data/lfw/: labelings.json
data/mit67/: class_labels.json
docker/: Dockerfile  build.sh  docker-compose.yml  init.sh  run.sh  run_integration_tests.sh  run_tests.sh  run_unit_tests.sh  tester_entrypoint.sh
frontend/python/: .gitignore  common.py  config.py  enclave_model.py  ennclave.py  setup.py  templates.py  utils.py
frontend/python/interop/: frontend_python.c
frontend/python/interoperability/: frontend_python.c
frontend/python/tests/: basics.py  common.py  run_tests.sh  test_basics.py  test_conv2.py  test_dense.py  test_depthwise_conv2d.py  test_gap1.py  test_gap2.py  test_max_pool1.py  test_max_pool2.py  test_relu.py  test_sep_conv1d.py  test_sigmoid.py  test_softmax.py
inc/: IParameterLoader.h  backend_native.h  backend_sgx.h  backends.h  enclave.hpp  enclave_nn.h  enclave_nn.hpp  matutil.h  matutil.hpp  native.hpp  native_nn.h  nn.h  nxx.h  output.h  parameters.h
inc/test/: add.h  assert.h  conv2.cpp  conv2.h  depthwise_conv2.h  global_average_pooling1.h  global_average_pooling2.h  max_pool1.h  max_pool2.h  multiply.h  relu.h  sep_conv1.h  util.h  zero_pad2.h
interop/: Makefile  pymatutilmodule.c  spammodule.c  test.py
interop/first_test/: spammodule.c  test.py
lib/: .gitignore  Makefile  dummy_forward.c  enclave_dummy_config.xml  enclave_dummy_forward.c  generate_correct_results.py  native_dummy_forward.c  test_enclave.c  test_matutil.c  test_native
lib/common/: matutil.c
lib/enclave/: .gitignore  Makefile
lib/enclave/App/: wrapper.cpp  wrapper.h
lib/enclave/Enclave/: Enclave.config.xml  matutil.cpp
lib/enclave/app/: app.c  app.cpp  app.h  utils.c  utils.h  wrapper.c  wrapper.cpp  wrapper.h
lib/enclave/enclave/: config.xml  enclave.c  enclave.config.xml  enclave.cpp  enclave.edl  enclave.h  forward.c  forward.h  forward.hpp  (+5 more)
lib/native/: Makefile  dense.cpp  dense.hpp  dummy_forward.cpp  forward.h  forward.hpp  matutil.c  matutil.cpp  native.cpp  native_nn.c  native_nn.cpp  output.c  parameters.c  parameters.h  state.hpp
lib/sgx/: Makefile  test.c
lib/test/: add.c  assert.c  conv2.c  depthwise_conv2.c  global_average_pooling1.c  global_average_pooling2.c  max_pool1.c  max_pool2.c  multiply.c  relu.c  sep_conv1.c  util.c  zero_pad2.c
matmul/: Makefile  matmul  matmul.c  matmul.h  matutil.c  matutil.h  test_matmul.c  test_matutil  test_matutil.c
matmul/native/: Makefile  matutil.c
matutil/: Makefile  matutil.h  setup_ld_path.sh  test_native
python/: Makefile  advanced.py  dense.cpp  format_strings.py  keras_enclave.py  keras_enclave_test.py  keras_mnist.py  keras_mnist_enclave.py  keras_mnist_generate_c_files.py  keras_poc.py  load_test_enclave.py  test_interop.py  test_keras_enclave.py  tf_mnist.py
python/interop/: pymatutilmodule.c
python/tensorflow/: load_test.py  model.hdf5  tf_test.py
python/torch/: gen_headers.py  mnist.py  mnist_cnn.pt  mnist_unbiased.pt
related_work/: shokri17membership.pdf.xopp
setup/: setup_sgx_machine.sh
tests/: common.py  run_tests.sh  test_conv2.py  test_conv2d.py  test_conv2d_layers.py  test_dense.py  test_dense_layers.py  test_depthwise_conv2d.py  test_gap1.py  test_gap2.py  test_max_pool1.py  test_max_pool2.py  test_relu.py  test_sep_conv1d.py
tex/: Enclave-NN.bib  Makefile  graphic_cpu.tex  graphic_gpu.tex  graphic_test.tex  imdb_cpu.tex  imdb_encrypted.tex  imdb_gpu.tex  mit_cpu.tex  mit_gpu.tex  mit_new.tex  mnist_cpu.tex  mnist_encrypted.tex  mnist_gpu.tex  mnist_new.tex  paper.tex  preamble.tex  rotten_cpu.tex  rotten_encrypted.tex  rotten_gpu.tex  sota.tex  sources.bib  standalone_protocol.tex  winter_school.tex
tex/config/: definitions.tex
tex/macros/: imdb-cpu.tex  imdb-encrypted.tex  mit-encrypted.tex  mit-gpu.tex  mit.tex  mnist-cpu.tex  mnist-encrypted.tex  mnist.tex  new.tex  protocol-offline.tex  protocol-online.tex  rotten-cpu.tex  rotten-tomatoes-cpu.tex  rotten-tomatoes-encrypted.tex  rotten-tomatoes-gpu.tex
timing_logs/: amazon_times_cpu.csv  flowers_times_cpu.csv  imdb_times.csv  imdb_times_cpu.csv  mit67_times.csv  mit67_times.json  mit67_times_cpu.csv  mit67_times_important_cuts.csv  mit_times.csv  mit_times_cpu.csv  mit_times_gpu.csv  mit_times_new.csv  mnist_time_gpu.csv  mnist_times_cpu.csv  rotten_times_cpu.csv  rotten_times_gpu.csv
(+42 files in other folders)
